--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^0.26.0",
-    "json-server": "^0.17.0",
+    "miragejs": "^0.1.43",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
